--- a/style.css
+++ b/style.css
@@ -265,6 +265,7 @@ main{
     }
     main{
         padding: 1rem 0;
+        height: 100vh;
     }
     .picked{
         margin: 3rem auto 0 auto;
